# DeformSDFContact

./: .gitignore  README.md  pyproject.toml
paper/: generate_stage_summary_figures.py  theoretical_sdf_contact_draft.tex
pullback_sdf_contact/: __init__.py  assembly_surgery_comparison_summary.json  bench_affine_pullback.py  check_Kphiu_fd.py  check_consistent_linearized_outer_convergence.py  check_contact_geometry_fd.py  check_contact_structure_mode_loadpath.py  check_contact_tangent_uu_effect.py  check_contact_tangents_fd.py  check_cutback_robustness.py  check_indenter_block_contact.py  check_monolithic_assembly_breakdown.py  check_monolithic_baseline.py  check_monolithic_block_pc_sweep.py  check_monolithic_build_breakdown.py  check_monolithic_contact.py  check_monolithic_krylov.py  check_monolithic_krylov_vs_lu.py  check_monolithic_runtime_breakdown.py  check_monolithic_sparse_contact.py  check_monolithic_sparse_equivalence.py  check_monolithic_vs_staggered.py  check_staggered_contact.py  check_staggered_contact_baseline.py  check_state_consistency_after_cutback.py  check_structure_step_contact_sign.py  check_surface_assembly.py  config.py  contact_history.csv  contact_history_aggressive_consistent_linearized.csv  contact_history_aggressive_notangent.csv  contact_history_aggressive_tangent.csv  contact_history_baseline_consistent_linearized.csv  contact_history_baseline_notangent.csv  contact_history_baseline_tangent.csv  contact_history_summary.txt  contact_history_summary_aggressive_consistent_linearized.txt  contact_history_summary_aggressive_notangent.txt  (+117 more)
(+133 files in other folders)
