[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deformsdfcontact"
version = "0.0.1"
description = "Minimal PETSc-first research scaffold for contact mechanics experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=6,<9"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["deformsdfcontact*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests/smoke", "tests/unit"]
addopts = "-q"
